// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RHSM Transformers should attempt to parse a capacity response: capacity 1`] = `
{
  "data": [],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a capacity response: capacity, daily like first of month granularity 1`] = `
{
  "data": [
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": null,
    },
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": true,
      "isFutureDate": false,
      "x": 1,
      "y": null,
    },
    {
      "date": "2019-07-21T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 2,
      "y": null,
    },
    {
      "date": "2019-07-22T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 3,
      "y": null,
    },
    {
      "date": "2019-07-23T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 4,
      "y": null,
    },
    {
      "date": "2019-07-24T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 5,
      "y": null,
    },
    {
      "date": "2019-07-25T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 6,
      "y": null,
    },
    {
      "date": "2019-07-26T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
    {
      "date": "2019-07-27T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 8,
      "y": null,
    },
    {
      "date": "2019-07-28T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 9,
      "y": null,
    },
    {
      "date": "2019-07-29T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 10,
      "y": null,
    },
    {
      "date": "2019-07-30T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 11,
      "y": null,
    },
    {
      "date": "2019-07-31T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 12,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a capacity response: capacity, daily like granularity 1`] = `
{
  "data": [
    {
      "date": "2019-07-14T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": 0,
    },
    {
      "date": "2019-07-15T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 1,
      "y": 0,
    },
    {
      "date": "2019-07-16T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 2,
      "y": null,
    },
    {
      "date": "2019-07-17T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 3,
      "y": null,
    },
    {
      "date": "2019-07-18T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 4,
      "y": null,
    },
    {
      "date": "2019-07-19T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 5,
      "y": null,
    },
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": true,
      "isFutureDate": false,
      "x": 6,
      "y": 0,
    },
    {
      "date": "2019-07-21T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
    {
      "date": "2019-07-22T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 8,
      "y": null,
    },
    {
      "date": "2019-07-23T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 9,
      "y": null,
    },
    {
      "date": "2019-07-24T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 10,
      "y": null,
    },
    {
      "date": "2019-07-25T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 11,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a capacity response: capacity, monthly like granularity 1`] = `
{
  "data": [
    {
      "date": "2019-01-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": 0,
    },
    {
      "date": "2019-02-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 1,
      "y": 0,
    },
    {
      "date": "2019-03-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 2,
      "y": 0,
    },
    {
      "date": "2019-04-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 3,
      "y": 0,
    },
    {
      "date": "2019-05-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 4,
      "y": null,
    },
    {
      "date": "2019-06-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": true,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 5,
      "y": null,
    },
    {
      "date": "2019-07-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 6,
      "y": 0,
    },
    {
      "date": "2019-08-01T00:00:00Z",
      "hasData": undefined,
      "hasInfiniteQuantity": false,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a tally response: tally 1`] = `
{
  "data": [],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a tally response: tally, daily like first of month granularity 1`] = `
{
  "data": [
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": 0.1,
    },
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": true,
      "isFutureDate": false,
      "x": 1,
      "y": 0.1,
    },
    {
      "date": "2019-07-21T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 2,
      "y": null,
    },
    {
      "date": "2019-07-22T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 3,
      "y": null,
    },
    {
      "date": "2019-07-23T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 4,
      "y": null,
    },
    {
      "date": "2019-07-24T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 5,
      "y": null,
    },
    {
      "date": "2019-07-25T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 6,
      "y": null,
    },
    {
      "date": "2019-07-26T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
    {
      "date": "2019-07-27T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 8,
      "y": null,
    },
    {
      "date": "2019-07-28T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 9,
      "y": null,
    },
    {
      "date": "2019-07-29T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 10,
      "y": null,
    },
    {
      "date": "2019-07-30T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 11,
      "y": null,
    },
    {
      "date": "2019-07-31T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 12,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a tally response: tally, daily like granularity 1`] = `
{
  "data": [
    {
      "date": "2019-07-14T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": 0,
    },
    {
      "date": "2019-07-15T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 1,
      "y": 0,
    },
    {
      "date": "2019-07-16T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 2,
      "y": 1.4977989514668784,
    },
    {
      "date": "2019-07-17T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 3,
      "y": 1.5547887908087836,
    },
    {
      "date": "2019-07-18T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 4,
      "y": 4.446975872251722,
    },
    {
      "date": "2019-07-19T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 5,
      "y": 4.69084013303121,
    },
    {
      "date": "2019-07-20T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": true,
      "isFutureDate": false,
      "x": 6,
      "y": null,
    },
    {
      "date": "2019-07-21T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
    {
      "date": "2019-07-22T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 8,
      "y": null,
    },
    {
      "date": "2019-07-23T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 9,
      "y": null,
    },
    {
      "date": "2019-07-24T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 10,
      "y": null,
    },
    {
      "date": "2019-07-25T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 11,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a tally response: tally, failed 1`] = `
{
  "data": [],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse a tally response: tally, monthly like granularity 1`] = `
{
  "data": [
    {
      "date": "2019-01-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 0,
      "y": 0,
    },
    {
      "date": "2019-02-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 1,
      "y": 0,
    },
    {
      "date": "2019-03-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 2,
      "y": 0,
    },
    {
      "date": "2019-04-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 3,
      "y": 0,
    },
    {
      "date": "2019-05-01T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 4,
      "y": 4.767144674723709,
    },
    {
      "date": "2019-06-01T00:00:00Z",
      "hasData": true,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 5,
      "y": 4.446975872251722,
    },
    {
      "date": "2019-07-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": false,
      "x": 6,
      "y": 0,
    },
    {
      "date": "2019-08-01T00:00:00Z",
      "hasData": false,
      "hasInfiniteQuantity": undefined,
      "isCurrentDate": false,
      "isFutureDate": true,
      "x": 7,
      "y": null,
    },
  ],
  "meta": {
    "category": undefined,
    "cloudigradeHasMismatch": undefined,
    "count": undefined,
    "metricId": undefined,
    "productId": undefined,
    "totalMonthlyDate": undefined,
    "totalMonthlyHasData": undefined,
    "totalMonthlyValue": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse an hosts response: hosts 1`] = `
{
  "data": [
    {
      "numberOfGuests": 2,
      "number_of_guests": 2,
      "sockets": 1000,
      "subscriptionManagerId": undefined,
      "subscription_manager_id": undefined,
    },
  ],
  "meta": {
    "count": 10,
    "productId": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse an hosts response: hosts, failed 1`] = `
{
  "data": [],
  "meta": {
    "count": undefined,
    "productId": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances 1`] = `
{
  "data": [
    {
      "a": 0.0003456,
      "b": 2,
      "c": 1000,
      "numberOfGuests": undefined,
      "number_of_guests": undefined,
    },
  ],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances, failed 1`] = `
{
  "data": [],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": undefined,
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances, uom cores 1`] = `
{
  "data": [
    {
      "a": 0.0003456,
      "b": 2,
      "c": 1000,
      "numberOfGuests": undefined,
      "number_of_guests": undefined,
    },
  ],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": "Cores",
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances, uom cores as parameter 1`] = `
{
  "data": [
    {
      "a": 0.0003456,
      "b": 2,
      "c": 1000,
      "numberOfGuests": undefined,
      "number_of_guests": undefined,
    },
  ],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": "Cores",
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances, uom sockets 1`] = `
{
  "data": [
    {
      "a": 0.0003456,
      "b": 2,
      "c": 1000,
      "numberOfGuests": undefined,
      "number_of_guests": undefined,
    },
  ],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": "Sockets",
  },
}
`;

exports[`RHSM Transformers should attempt to parse an instances response: instances, uom sockets as parameter 1`] = `
{
  "data": [
    {
      "a": 0.0003456,
      "b": 2,
      "c": 1000,
      "numberOfGuests": undefined,
      "number_of_guests": undefined,
    },
  ],
  "meta": {
    "count": undefined,
    "productId": undefined,
    "uom": "Sockets",
  },
}
`;

exports[`RHSM Transformers should have specific response transformers: specific transformers 1`] = `
{
  "hosts": [Function],
  "instances": [Function],
  "tallyCapacity": [Function],
}
`;
